--- a/heroku/assets/css/styleDashboard.css
+++ b/heroku/assets/css/styleDashboard.css
@@ -447,6 +447,7 @@ a {
   border-bottom: 1px solid var(--c-gray-600);
   background-color: transparent;
   padding-left: 1.5rem;
+  color: var(--c-text-primary);
 }
 .search-field i {
   position: absolute;
