--- a/heroku/assets/css/styleLogin.css
+++ b/heroku/assets/css/styleLogin.css
@@ -53,22 +53,19 @@ body {
 }
 
 .select-css {
-  margin-left:8px;
-  margin-bottom: 15px;
-  width: 275px;
-	font-size: 16px;
-  font-weight:bold;
-	padding: .6em 1.4em .5em .8em;
-	border: none;
-	border-radius: .5em;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-  color: #BABECC;
-  background-color: #EBECF0;
-  text-shadow: 2px 2px 2px #FFF;
-	/* background-color: #fff; */
-  box-shadow: inset -2px -2px 5px white, inset 2px 2px 5px rgba(0, 0, 0, 0.1);
-
+  width: 350px;
+  height: 40px;
+  margin: 4px 0;
+  padding-left: 25px;
+  font-size: 13px;
+  letter-spacing: 0.15px;
+  border: none;
+  outline: none;
+  font-family: "Montserrat", sans-serif;
+  background-color: #ecf0f3;
+  transition: 0.25s ease;
+  border-radius: 8px;
+  box-shadow: inset 2px 2px 4px #d1d9e6, inset -2px -2px 4px #f9f9f9;
 }
 
 .select-css:focus {
